Fixed x-overflow

--- a/css/main.css
+++ b/css/main.css
@@ -1,6 +1,9 @@
 html, body {
   height: 100%;
 }
+body {
+  overflow-x:hidden;
+}
 .carousel {
   height:60%;
 }
